# Inumaki

./: ERROR_HANDLING.md  README.md  pyproject.toml
samples/: hello.inu
src/inumaki/: inu_ast.py  inu_exceptions.py  inu_interpreter.py  inu_lexer.py  inu_parser.py  inu_stdlib.py  inumaki.py  lexer.py
